# freeproxy-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
getfreeproxy/: __init__.py  _utils.py  async_client.py  client.py
tests/: test_async_client.py  test_client_basic.py
